move navigation buttons to reside on top of search results in order to avoid jumping buttons

--- a/MWP-Part3/styles/index.css
+++ b/MWP-Part3/styles/index.css
@@ -285,6 +285,8 @@ form {
     width: intrinsic; /* CSS3 way for fitting width to contents */
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #search-results-navigation input[type='image'] {
